<!--

Copyright (c) 2016, EPAM SYSTEMS INC

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

-->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                   http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.epam.dlab</groupId>
    <artifactId>dlab</artifactId>
    <version>1.0</version>
    <packaging>pom</packaging>

    <scm>
        <connection>scm:git:file://.</connection>
        <url>scm:git:file://.</url>
        <tag>HEAD</tag>
    </scm>

    <profiles>
        <profile>
            <id>aws</id>
        </profile>
        <profile>
            <id>azure</id>
        </profile>
        <profile>
            <id>gcp</id>
        </profile>
    </profiles>

    <modules>
        <module>services/common</module>
        <module>services/billing-aws</module>
        <module>services/security-service</module>
        <module>services/provisioning-service</module>
        <module>services/self-service</module>
        <module>services/billing-azure</module>
        <module>services/billing-gcp</module>
        <module>services/security-azure</module>
        <module>services/security-gcp</module>
        <module>services/security-aws</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <org.apache.commons.version>3.5</org.apache.commons.version>
        <io.dropwizard.version>1.0.2</io.dropwizard.version>
        <com.google.inject.version>4.1.0</com.google.inject.version>
        <dropwizard-template-config.version>1.4.0</dropwizard-template-config.version>
        <com.aegisql.conveyor.version>1.1.7</com.aegisql.conveyor.version>
        <org.mongodb.version>3.3.0</org.mongodb.version>
        <junit.version>4.12</junit.version>
        <org.mockito.version>1.10.19</org.mockito.version>
        <com.fasterxml.jackson.core.version>2.8.8</com.fasterxml.jackson.core.version>
        <com.fasterxml.jackson.annotations.version>2.8.0</com.fasterxml.jackson.annotations.version>

        <java.version>1.8</java.version>
        <properties-maven-plugin.version>1.0.0</properties-maven-plugin.version>
        <maven-compiler-plugin.version>3.5.1</maven-compiler-plugin.version>
        <buildnumber-maven-plugin.version>1.4</buildnumber-maven-plugin.version>
        <maven-shade-plugin.version>2.4.3</maven-shade-plugin.version>
        <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${org.apache.commons.version}</version>
        </dependency>

        <dependency>
            <groupId>com.google.inject</groupId>
            <artifactId>guice</artifactId>
            <version>${com.google.inject.version}</version>
        </dependency>
        <dependency>
            <groupId>de.thomaskrille</groupId>
            <artifactId>dropwizard-template-config</artifactId>
            <version>${dropwizard-template-config.version}</version>
        </dependency>
        <dependency>
            <groupId>com.aegisql</groupId>
            <artifactId>conveyor</artifactId>
            <version>${com.aegisql.conveyor.version}</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>${com.fasterxml.jackson.core.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${com.fasterxml.jackson.core.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-guava</artifactId>
            <version>${com.fasterxml.jackson.core.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.dataformat</groupId>
            <artifactId>jackson-dataformat-yaml</artifactId>
            <version>${com.fasterxml.jackson.core.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-annotations</artifactId>
            <version>${com.fasterxml.jackson.annotations.version}</version>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>


    </dependencies>

    <build>
        <finalName>${project.artifactId}-${dlab.version}</finalName>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>properties-maven-plugin</artifactId>
                <version>${properties-maven-plugin.version}</version>
                <executions>
                    <execution>
                        <phase>initialize</phase>
                        <goals>
                            <goal>read-project-properties</goal>
                        </goals>
                        <configuration>
                            <quiet>true</quiet>
                            <files>
                                <file>../../build.properties</file>
                                <file>build.properties</file>
                            </files>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>buildnumber-maven-plugin</artifactId>
                <version>${buildnumber-maven-plugin.version}</version>
                <executions>
                    <execution>
                        <phase>validate</phase>
                        <goals>
                            <goal>create</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <doCheck>false</doCheck>
                    <doUpdate>false</doUpdate>
                    <getRevisionOnlyOnce>true</getRevisionOnlyOnce>
                    <revisionOnScmFailure>none</revisionOnScmFailure>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.rat</groupId>
                <artifactId>apache-rat-plugin</artifactId>
                <version>0.7</version>
                <configuration>
                    <excludes>
                        <exclude>.git/**</exclude>
                        <exclude>.idea/**</exclude>
                        <exclude>**/.gitignore</exclude>
                        <exclude>**/*.ini</exclude>
                        <exclude>**/*.json</exclude>
                        <exclude>**/__init__.py</exclude>
                        <exclude>**/*.conf</exclude>
                        <exclude>**/.gitkeep</exclude>
                        <exclude>**/*.lst</exclude>
                        <exclude>**/*template</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <phase>verify</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
